# AGENT-RM

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_TRACKING.md  README.md  SUIVI_PROJET.md  pyproject.toml
.claude/: settings.json
.claude/rules/: ai-dev-workflow.md  ebios-terminology.md  git-workflow.md  project-config.md
.claude/rules/app/: api-security.md  ui-streamlit.md
.claude/rules/compliance/: anssi-qualification.md
.claude/rules/corpus/: corpus-pipeline.md
archives/: ebios-rm-llm-structure.tar  personal-preferences-global.md
compliance/: AGENTS.md
compliance/matrices/: anssi_requirements.py  compliance_matrix.py
compliance/scripts/: run_compliance_check.py
corpus/: AGENTS.md
corpus/raw/: .generation_progress.json  index.jsonl
corpus/scripts/: 00_extract_mitre_xlsx.py  01_extract_pdf.py  02_generate_synthetics.py  03_generate_counterexamples.py  04_quality_filter.py  05_format_chatml.py  06_stratified_split.py  07_validate_corpus.py  schema.py
docs/ebios/: TTPs_EBIOS_RM_200.csv
evaluation/: AGENTS.md
evaluation/benchmarks/: atelier_checks.py  ebios_rules.py
finetuning/: AGENTS.md
inference/: AGENTS.md
orchestration/: AGENTS.md
orchestration/chains/: rag_chain.py
orchestration/memory/: atelier_context.py  session_memory.py
orchestration/utils/: chunk_formatter.py  formatting.py
prompts/: AGENTS.md
rag/: AGENTS.md  __init__.py
rag/embeddings/: __init__.py  chunker.py  embedding_config.py  openrouter_embeddings.py
rag/scripts/: add_documents.py  build_index.py  inspect_chunks.py  test_retrieval.py
tests/: AGENTS.md  conftest.py
tests/integration/: test_pipeline.py  test_rag_chain.py
tests/unit/: test_chatml_format.py  test_corpus_quality.py  test_formatting.py  test_mutations.py  test_schema.py
(+111 files in other folders)
